2008-05-12 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* help/C/figures
	* help/C/figures/lab_browser_start.png
	* help/C/figures/lab_map_start.png
	* help/C/labyrinth.xml
	More help.

2008-05-12 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Browser.py
	* help/de
	* help/de/de.po
	* help/Makefile.am
	* Makefile.am
	* data/labyrinth.glade
	Make help visible to users. Start german translation of help.

2008-05-06 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	Fix Issue 115.

2008-04-29 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/ResourceThought.py
	* src/MainWindow.py
	Fix severe bug on resource thought creation.

2008-04-29 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/ResourceThought.py
	Allow editing of a resource thought through right click.

2008-04-20 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/ResourceThought.py
	* src/TextThought.py
	* src/MainWindow.py
	* src/MMapArea.py
	* src/utils.py
	* data/labyrinth-ui.xml
	* data/labyrinth.glade
	Add resource thoughts, tackling issue 101.

2008-04-19 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/labyrinth.py
	Minor cleanups like indentation.

2008-04-19 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	Small refactorizations.

2008-04-14 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* help/
	Initial import of user manual.

2008-04-13 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Browser.py
	* src/MainWindow.py
	Address some problems with the sidebar (Issue 94) such as
	auto-showing and expanding.

2008-04-13 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Implemented issue 100. However it feels rather strange, so
	it should be tested with users.

2008-04-11 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/DrawingThought.py
	* src/Links.py
	* src/TextBufferMarkup.py
	* src/UndoManager.py